# odysseus-code

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: MVP.md  NEXT-AGENT-PROMPT.md  api-client.md  config.md  docs.md  generate.md  prompt.md  sandbox.md  sessions.md  skeleton.md  tests-ci.md  tui.md
src/: actions.rs  cli.rs  client.rs  config.rs  context.rs  lib.rs  main.rs  mode.rs  sandbox.rs  session.rs
src/actions/: config_cmd.rs  generate.rs  models.rs  prompt.rs  run.rs  session.rs  tui.rs
src/actions/tui/: app.rs  banner.rs  markdown.rs  mod.rs  render.rs
src/actions/tui/app/: tests.rs
src/actions/tui/banner/: tests.rs
src/actions/tui/markdown/: highlight.rs  tests.rs
src/actions/tui/render/: tests.rs
src/agent/: assembler.rs  mod.rs  tests.rs
src/agent/assembler/: tests.rs
src/config/: tests.rs
src/llm/: message.rs  mod.rs  openai.rs  sse.rs
src/llm/openai/: mod.rs  tests.rs  wire.rs
src/llm/openai/wire/: tests.rs
src/skills/: mod.rs  run.rs
src/skills/bundled/: setup-searxng.md  summarize-changes.md
src/tools/: ask_user.rs  fs_read.rs  fs_write.rs  mod.rs  search.rs  shell.rs  skills.rs  web_search.rs
tests/: cli.rs  generate.rs  prompt.rs  session.rs
